Fixes some styles issue, make it look better on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 
 .header {
+  position: relative;
   background-color: black;
   padding: 1%;
 
@@ -14,9 +15,9 @@
   content: " ";
   width: 100%;
   height: 0.8vh;
-  top: 5.8vh;
   left: 0;
   bottom: 0%;
+
   background-image: linear-gradient(90deg,
       #FF0000 0%,
       #FF0000 10%,
@@ -37,9 +38,7 @@
       #000000 80%,
       #000000 90%,
       #2c1111 90%,
-      #d3ac00 100%
-
-    );
+      #d3ac00 100%);
 }
 
 .sticky_header {
@@ -48,3 +47,5 @@
   text-decoration: none;
 
 }
+
+
