--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,6 +10,7 @@
   z-index: 1;
 }
 
+
 .navbar ul {
   margin: 0;
   padding: 0;
@@ -55,4 +56,33 @@
 
 .navbar li:hover::before {
   width: 100%;
+}
+
+@media (max-width: 1000px) {
+  .navbar {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: fit-content;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(15px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .navbar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  /* .navbar ul li {
+    margin-right: 20px;
+  } */
 }
